--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>cloud-provider-payment8001</module>
         <module>cloud-api-common</module>
+        <module>cloud-consumer-order80</module>
     </modules>
     <packaging>pom</packaging>
 
