--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -11,6 +11,13 @@ spring:
     username: root
     password: root
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
+
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.ucandoooh.springcloud.entities
