--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
         <module>cloud-provider-payment8001</module>
         <module>cloud-api-common</module>
         <module>cloud-consumer-order80</module>
+        <module>cloud-eureka-service7001</module>
+        <module>cloud-eureka-service7002</module>
+        <module>cloud-provider-payment8002</module>
     </modules>
     <packaging>pom</packaging>
 
