--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 80
 
 spring:
+  cloud:
+    loadbalancer:
+      enabled: false
+
   application:
     name: cloud-order-service
   datasource:
@@ -10,6 +14,7 @@ spring:
     url: jdbc:mysql://localhost:3306/springcloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
+
 
 eureka:
   client:
@@ -21,3 +26,4 @@ eureka:
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.ucandoooh.springcloud.entities
+
