bus & stream & sleuth done

--- a/cloud-config-client-3355/src/main/resources/bootstrap.yml
+++ b/cloud-config-client-3355/src/main/resources/bootstrap.yml
@@ -18,6 +18,12 @@ spring:
       profile: prod
       uri: http://localhost:3344
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 management:
   endpoints:
     web:
