--- a/cloud-config-center-3344/src/main/resources/bootstrap.yml
+++ b/cloud-config-center-3344/src/main/resources/bootstrap.yml
@@ -16,3 +16,15 @@ spring:
       server:
         git:
           uri: https://gitee.com/ucandoooh/springcloud-config.git
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
